--- a/content/assignment/03-hw1.html
+++ b/content/assignment/03-hw1.html
@@ -21,12 +21,11 @@
 <li><p>Combine the two years of data into one data frame. Use the Date variable to create a new column for year, which will serve as an identifier. Change the names of the key variables so that they are easier to refer to in your code.</p></li>
 <li><p>Create a basic map in leaflet() that shows the locations of the sites (make sure to use different colors for each year). Summarize the spatial distribution of the monitoring sites.</p></li>
 <li><p>Check for any missing or implausible values of PM<span class="math inline">\(_{2.5}\)</span> in the combined dataset. Explore the proportions of each and provide a summary of any temporal patterns you see in these observations.</p></li>
-<li><p>Filter the data to include only the states in the continential United States.</p></li>
-<li><p>Explore the main question of interest at three different levels:</p>
+<li><p>Explore the main question of interest at three different spatial levels. Create exploratory plots and summary statistics that best suit each level of data. Be sure to write up explanations of what you observe in these data.</p>
 <ul>
-<li>nation</li>
 <li>state</li>
-<li>CA counties</li>
+<li>county</li>
+<li>site in Los Angeles</li>
 </ul></li>
 </ol>
 <hr />
