--- a/content/assignment/03-hw1.html
+++ b/content/assignment/03-hw1.html
@@ -12,7 +12,7 @@
 <h1>Assignment Description</h1>
 <p>We will work with air pollution data from the U.S. Environmental Protection Agency (EPA). The EPA has a national monitoring network of air pollution sites that The primary question you will answer is whether daily concentrations of PM<span class="math inline">\(_{2.5}\)</span> (particulate matter air pollution with aerodynamic diameter less than 2.5 <span class="math inline">\(\mu\)</span>m) have decreased in California over the last 15 years (from 2004 to 2019).</p>
 <p>A primer on particulate matter air pollution can be found <a href="https://www.epa.gov/pm-pollution/particulate-matter-pm-basics">here</a>.</p>
-<p>Your assignment should be completed in R markdown or (Jupyter Notebooks).</p>
+<p>Your assignment should be completed in R markdown.</p>
 </div>
 <div id="steps" class="section level1">
 <h1>Steps</h1>
@@ -21,7 +21,7 @@
 <li><p>Combine the two years of data into one data frame. Use the Date variable to create a new column for year, which will serve as an identifier. Change the names of the key variables so that they are easier to refer to in your code.</p></li>
 <li><p>Create a basic map in leaflet() that shows the locations of the sites (make sure to use different colors for each year). Summarize the spatial distribution of the monitoring sites.</p></li>
 <li><p>Check for any missing or implausible values of PM<span class="math inline">\(_{2.5}\)</span> in the combined dataset. Explore the proportions of each and provide a summary of any temporal patterns you see in these observations.</p></li>
-<li><p>Explore the main question of interest at three different spatial levels. Create exploratory plots and summary statistics that best suit each level of data. Be sure to write up explanations of what you observe in these data.</p>
+<li><p>Explore the main question of interest at three different spatial levels. Create exploratory plots (e.g. boxplots, histograms, line plots) and summary statistics that best suit each level of data. Be sure to write up explanations of what you observe in these data.</p>
 <ul>
 <li>state</li>
 <li>county</li>
