--- a/content/assignment/03-lab.html
+++ b/content/assignment/03-lab.html
@@ -1,3 +1,13 @@
+---
+title: "Lab 03 - Exploratory Data Analysis"
+output: 
+  tufte::tufte_html:
+    css: ../lab.css
+    tufte_variant: "envisioned"
+    highlight: pygments
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
