--- a/content/assignment/03-hw1.html
+++ b/content/assignment/03-hw1.html
@@ -1,3 +1,9 @@
+---
+title: "Assignment 01 - Exploratory Data Analysis"
+output: tufte::tufte_html
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
