--- a/content/reading/03-reading.html
+++ b/content/reading/03-reading.html
@@ -1,3 +1,11 @@
+---
+title: "Exploratory data analysis"
+date: "2020-09-02"
+citeproc: false
+bibliography: ../../static/bib/references.bib
+csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
+---
+
 
 
 <div id="required-reading" class="section level1">
