--- a/static/slides/01-welcome/slides.html
+++ b/static/slides/01-welcome/slides.html
@@ -4,6 +4,8 @@
     <title>Welcome!</title>
     <meta charset="utf-8" />
     <script src="libs/header-attrs-2.3/header-attrs.js"></script>
+    <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
+    <script src="libs/countdown-0.3.5/countdown.js"></script>
     <link rel="stylesheet" href="theme.css" type="text/css" />
   </head>
   <body>
@@ -40,6 +42,18 @@ Syllabus, reading materials, slides, labs and assignments
 
 ---
 
+# USC Software Development Help Page
+
+https://uscbiostats.github.io/software-dev-site/
+
+collection of knowledge about 
+
+- computing
+- standards
+- research practices
+
+---
+
 # What is data science?
 
 - Data science is an exciting discipline that allows you to turn raw data into understanding, insight, and knowledge.
@@ -67,6 +81,30 @@ The course will teach language agnostic skills that are easily transferable, wit
 --
 
 You can use any language/tool you prefer. But we can only guarantee help if you are using R and RStudio.
+
+---
+
+# Break time
+
+We will be taking a 15 min break
+
+<div class="countdown" id="timer_5f3d61b9" style="right:33%;bottom:33%;" data-warnwhen="0">
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+---
+
+# First Lab 🎉
+
+The lab exercises can be found at: 
+
+Website -&gt; Schedule -&gt; &lt;svg style="height:0.8em;top:.04em;position:relative;" viewBox="0 0 640 512"&gt;&lt;path d="M208 352c-2.39 0-4.78.35-7.06 1.09C187.98 357.3 174.35 360 160 360c-14.35 0-27.98-2.7-40.95-6.91-2.28-.74-4.66-1.09-7.05-1.09C49.94 352-.33 402.48 0 464.62.14 490.88 21.73 512 48 512h224c26.27 0 47.86-21.12 48-47.38.33-62.14-49.94-112.62-112-112.62zm-48-32c53.02 0 96-42.98 96-96s-42.98-96-96-96-96 42.98-96 96 42.98 96 96 96zM592 0H208c-26.47 0-48 22.25-48 49.59V96c23.42 0 45.1 6.78 64 17.8V64h352v288h-64v-64H384v64h-76.24c19.1 16.69 33.12 38.73 39.69 64H592c26.47 0 48-22.25 48-49.59V49.59C640 22.25 618.47 0 592 0z"/&gt;&lt;/svg&gt; -&gt; Lab Exercise
+
+https://elastic-khorana-70231e.netlify.app/assignment/01-lab/
+
+Related Github Issue
+
+https://github.com/USCbiostats/PM566/issues/19
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
