--- a/content/class/01-class.html
+++ b/content/class/01-class.html
@@ -28,6 +28,7 @@ editor_options:
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
 <p><a href="/assignment/01-lab">link</a></p>
+<p><a href="/assignment/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
