forgot to render

--- a/content/syllabus/index.html
+++ b/content/syllabus/index.html
@@ -61,7 +61,7 @@ output:
 <div id="readings-and-supplementary-materials" class="section level2">
 <h2>Readings and Supplementary Materials</h2>
 <ol style="list-style-type: decimal">
-<li>R Programming for Data Science, 2019. Roger Peng. <a href="https://bookdown.org/rdpeng/rprogdatas" class="uri">https://bookdown.org/rdpeng/rprogdatas</a></li>
+<li>R Programming for Data Science, 2019. Roger Peng. <a href="https://bookdown.org/rdpeng/rprogdatascience/" class="uri">https://bookdown.org/rdpeng/rprogdatascience/</a></li>
 </ol>
 </div>
 <div id="supplementary-references" class="section level2">
