--- a/static/slides/01-welcome/slides.html
+++ b/static/slides/01-welcome/slides.html
@@ -4,8 +4,6 @@
     <title>Welcome!</title>
     <meta charset="utf-8" />
     <script src="libs/header-attrs-2.3/header-attrs.js"></script>
-    <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
-    <script src="libs/countdown-0.3.5/countdown.js"></script>
     <link rel="stylesheet" href="theme.css" type="text/css" />
   </head>
   <body>
@@ -126,11 +124,7 @@ Over 16,000 packages added to CRAN
 
 # Break time
 
-We will be taking a 15 min break
-
-<div class="countdown" id="timer_5f3d74e4" style="right:33%;bottom:33%;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+We will be back for labs at 2:30
 
 ---
 
