--- a/content/reading/04-reading.html
+++ b/content/reading/04-reading.html
@@ -1,19 +1,10 @@
----
-title: "Data visualization"
-date: "2020-09-09"
-citeproc: false
-bibliography: ../../static/bib/references.bib
-csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
----
-
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="required-reading" class="section level1">
 <h1>Required reading</h1>
-<p>To be announced</p>
+<p>Chapter 3 of <a href="https://r4ds.had.co.nz/data-visualisation.html">R for Data Science</a></p>
 </div>
 <div id="optional-reading" class="section level1">
 <h1>Optional reading</h1>
-<p>To be announced</p>
+<p>Chapter 15 of <a href="https://bookdown.org/rdpeng/exdata/the-ggplot2-plotting-system-part-2.html">Exploratory Data Analysis with R</a></p>
 </div>
