Updating Week 3 rendering

--- a/content/assignment/03-lab.html
+++ b/content/assignment/03-lab.html
@@ -1,3 +1,9 @@
+---
+title: "Lab 03 - Exploratory Data Analysis"
+output: tufte::tufte_html
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
