--- a/content/class/02-class.html
+++ b/content/class/02-class.html
@@ -1,3 +1,25 @@
+---
+title: "Version control and reproducible research"
+linktitle: "02: Version control"
+date: "2020-08-26"
+class_date: "2020-08-26"
+citeproc: false
+bibliography: ../../static/bib/references.bib
+csl: ../../static/bib/chicago-syllabus-no-bib.csl
+output:
+  blogdown::html_page:
+    template: ../../pandoc/toc-title_html.template
+    toc: false
+menu:
+  class:
+    parent: Class sessions
+    weight: 1
+type: docs
+weight: 1
+editor_options: 
+  chunk_output_type: console
+---
+
 <!-- BLOGDOWN-HEAD -->
 <!-- /BLOGDOWN-HEAD -->
 
